2018-12-09  Ben Elliston  <bje@gnu.org>

	* baseboards/basic-sid.exp, baseboards/basic-sim.exp,
	baseboards/i386-sid.exp, baseboards/mt-sid.exp,
	baseboards/sh-sid.exp, config/adb.exp, config/gdb-comm.exp,
	config/gdb_stub.exp, config/sim.exp, config/unix.exp,
	config/vxworks.exp, lib/dejagnu.exp, lib/dg.exp,
	lib/framework.exp, lib/kermit.exp, lib/libgloss.exp,
	lib/remote.exp, lib/rsh.exp, lib/target.exp, lib/tip.exp,
	lib/utils.exp, testsuite/lib/libsup.exp,
	testsuite/runtest.all/options.exp,: Remove unnecessary braces
	around variable expansions.

2018-12-09  Ben Elliston  <bje@gnu.org>

	* lib/debugger.exp, lib/dg.exp, lib/framework.exp, lib/ftp.exp,
	lib/kermit.exp, lib/libgloss.exp, lib/remote.exp, lib/rlogin.exp,
	lib/target.exp, lib/tip.exp, lib/utils.exp, runtest.exp: Remove
	unnecessary quotes and braces around variable expansions.

2018-12-09  Ben Elliston  <bje@gnu.org>

	* config/gdb-comm.exp: Remove unnecessary quotes.
	* config/gdb_stub.exp: Likewise.
	* config/vxworks.exp: Likewise.
	* config/unix.exp: Likewise.
	* config/sim.exp: Likewise.

2018-12-09  Ben Elliston  <bje@gnu.org>

	* testsuite/lib/libsup.exp: Remove unnecessary quotes around
	variable expansions.
	* testsuite/lib/util-defs.exp: Likewise.

2018-12-09  Ben Elliston  <bje@gnu.org>

	* baseboards/androideabi.exp: Remove unnecessary quotes and braces
	around variable expansions.
	* baseboards/basic-sid.exp: Likewise.
	* baseboards/cris-sim.exp: Likewise.
	* baseboards/generic-sim.exp: Likewise.
	* baseboards/mcore-moto-sim.exp: Likewise.
	* baseboards/multi-sim.exp: Likewise.

2018-12-08  Ben Elliston  <bje@gnu.org>

	* NEWS: Tweak.

2018-12-08  Ben Elliston  <bje@gnu.org>

	* lib/dejagnu.exp (host_execute): Remove unnecessary quotes around
	variable expansions.
	* testsuite/runtest.all/clone_output.test: Likewise.
	* testsuite/runtest.all/target.test: Likewise.
	* testsuite/runtest.all/stats.exp: Likewise.
	* testsuite/runtest.all/remote.test: Likewise.